[project]
name = "assignment1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi[standard]>=0.115.12",
    "psycopg2>=2.9.10",
    "pytest>=8.3.5",
    "requests>=2.32.3",
    "ruff>=0.11.11",
    "sqlalchemy>=2.0.41",
    "sqlmodel>=0.0.24",
]
